cks/resources/ingress/ingress.yaml
apiVersion: v1             
kind: Pod                  
metadata:                  
  creationTimestamp: null  
  labels:                  
    run: pod1              
  name: pod1               
spec:                      
  containers:              
  - image: nginx           
    name: pod1             
    resources: {}          
  dnsPolicy: ClusterFirst  
  restartPolicy: Always    
status: {}                 

---

apiVersion: v1             
kind: Pod                  
metadata:                  
  creationTimestamp: null  
  labels:                  
    run: pod2              
  name: pod2               
spec:                      
  containers:              
  - image: httpd           
    name: pod2             
    resources: {}          
  dnsPolicy: ClusterFirst  
  restartPolicy: Always    


---

apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: service1
  name: service1
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: pod1
status:
  loadBalancer: {}

---

apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: service2
  name: service2
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: pod2
status:

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: secure-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - secure-ingress.com
    secretName: secure-ingress
  rules:
  - host: secure-ingress.com
    http:
      paths:
      - path: /service1
        pathType: Prefix
        backend:
          service:
            name: service1
            port:
              number: 80
      - path: /service2
        pathType: Prefix
        backend:
          service:
            name: service2
            port:
              number: 80
